--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
-    "vue": "^3.5.17"
+    "@vueuse/motion": "^3.0.3",
+    "chart.js": "^4.5.0",
+    "vue": "^3.5.17",
+    "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
